--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -20,7 +20,7 @@
         }
         
         &.content {
-            opacity:  0.9;
+            opacity: 0.9;
         }
     }
 
@@ -39,9 +39,8 @@
     .background-image {
         height: 100%;
         width: 100%;
-        background-position: center;
         background-size: cover;
-    
+        background-position: center;
     }
   
     .content {
@@ -53,12 +52,12 @@
       justify-content: center;
       border: 1px solid black;
       background-color: white;
-      opacity: 0.7px;
+      opacity: 0.7;
       position: absolute;
 
       .title {
         font-weight: bold;
-        margin-bottom: 6px;
+        margin: 0 6px 0;
         font-size: 22px;
         color: #4a4a4a;
       }
