--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 body {
     padding: 20px 80px;
 }
- a {
+
+a {
      text-decoration: none;
      color: black;
- }
+}
+
+* {
+    box-sizing: border-box;
+}
